--- a/src/WorkoutPlan/style.scss
+++ b/src/WorkoutPlan/style.scss
@@ -1,12 +1,12 @@
-$list-item-color: #919a9f;
 
-.ProductList {
+.WorkoutPlan {
 
   &__wrapper{
     display: flex;
     background: #f7edf2;
     padding: 24px;
     color:#3A2626;
+    min-height: 100vh
   }
 
   &__columnTitle {
@@ -21,9 +21,10 @@ $list-item-color: #919a9f;
   }
 
   &__column {
+    height: fit-content;
     flex-direction: column;
     background-color: #F8F5F9;
-    margin: 0 24px!important;
+    margin: 0 12px!important;
     padding: 24px;
     border-radius: 24px;
     box-shadow: 3px 3px 17px 0 rgba(0, 0, 0, 0.17);
